# swarm-test

./: Makefile  pyproject.toml
src/: demo.py
src/configs/: coordinator.py  tools.py
src/configs/agents/: clauses_agent.py  compliance_agent.py  contract_type_agent.py  document_structure_agent.py  jurisdiction_agent.py  legal_context_agent.py  quality_assurance_agent.py  triage_agent.py
src/swarm/: swarm.py
